--- a/index.html
+++ b/index.html
@@ -208,15 +208,15 @@
                 <!--Proyecto 4-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="img/calculadora.png" alt="Proyecto 4, calculadora">
+                        <img src="img/ecommerce-web.png" alt="Proyecto 4, ecommerce-web">
                         <div class="overlay">
-                            <p>Calculadora</p>
+                            <p>Ecommerce-Web</p>
                             <div class="iconos-contenedor">
-                                <a href="https://www.freecodecamp.org/espanol/" target="_blank"
+                                <a href="http://bcommerce-net.somee.com/" target="_blank"
                                     rel="noopener noreferrer">
                                     <i class="bi bi-laptop"></i>
                                 </a>
-                                <a href="https://github.com/RodrigoBombieri/ArgentinaPrograma/tree/main/Calculadora"
+                                <a href="https://github.com/RodrigoBombieri/tp-final-nivel3-Bombieri-Rodrigo"
                                     target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
