--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@
                 <!--Proyecto 5-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="img/weather-app.png" alt="Proyecto 5, weather-app">
+                        <img src="img/cine.png" alt="Proyecto 5, software de cine">
                         <div class="overlay">
-                            <p>Weather App</p>
+                            <p>Software de Gestión de Cine</p>
                             <div class="iconos-contenedor">
                                 <a href="https://www.freecodecamp.org/espanol/" target="_blank"
                                     rel="noopener noreferrer">
                                     <i class="bi bi-laptop"></i>
                                 </a>
-                                <a href="https://github.com/RodrigoBombieri/weatherBombApp/tree/main/Weather%20App"
+                                <a href="https://github.com/RodrigoBombieri/UTN_Laboratorio_II/"
                                     target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
