--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
                 <!--Proyecto 6-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="img/ecommerce.png" alt="Proyecto 6, ecommerce">
+                        <img src="img/webapi.png" alt="Proyecto 6, API de Productos">
                         <div class="overlay">
-                            <p>Ecommerce</p>
+                            <p>WEB API Productos</p>
                             <div class="iconos-contenedor">
-                                <a href="https://www.freecodecamp.org/espanol/" target="_blank"
+                                <a href="https://github.com/RodrigoBombieri/API_Producto" target="_blank"
                                     rel="noopener noreferrer">
                                     <i class="bi bi-laptop"></i>
                                 </a>
-                                <a href="https://github.com/RodrigoBombieri/app-E-commerce"
+                                <a href="https://github.com/RodrigoBombieri/API_Producto"
                                     target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
