Corrigiendo bugs y agregando foto

--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
                         <a class="nav-link " href="#articulos">Articulos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#testimonios">Testimonios</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link " href="#contacto">Contacto</a>
                     </li>
                 </ul>
@@ -67,7 +64,7 @@
     <!--Seccion Hero-->
     <section id="hero" class="hero align-items-stretch">
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-            <img class="foto-perfil rounded-circle" src="img/auto-crecimiento.png" alt="foto de rodrigo">
+            <img class="foto-perfil rounded-circle" src="img/foto.jpg" alt="foto de rodrigo">
             <h1>Hola, soy Rodrigo Bombieri</h1>
             <h2>En la actualidad soy estudiante de la Tecnicatura en Programación en UTN</h2>
         </div>
@@ -80,9 +77,8 @@
     <!--Seccion Sobre Mi-->
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
         <div class="contenedor">
-            <h2 class="text-center seccion-titulo">Conoce a Rodrigo Bombieri</h2>
-            <p class="text-center seccion-texto"> Soy de Urdinarrain, Entre Ríos, Argentina, tengo 33 años y me encuentro cursando la Tecnicatura en Programación, en la Universidad Tecnológica Nacional y 
-                realizando un curso de C# .Net con MaxiPrograma.
+            <h2 class="text-center seccion-titulo">Conoceme</h2>
+            <p class="text-center seccion-texto"> Soy de Urdinarrain, Entre Ríos, Argentina, tengo 33 años y me encuentro cursando la Tecnicatura en Programación, en la Universidad Tecnológica Nacional.
                 Me fascina aprender nuevas temáticas, mi curiosidad me lleva a querer conocer hasta el último detalle de la tecnología en la que esté trabajando 
                 y a continuar capacitándome hasta perfeccionarla.
                 Si crees que puedo ayudar a un proyecto que estés desarrollando ¡Contáctame!</p>
@@ -114,7 +110,7 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-pencil"></i>
                     <p class="experiencia-titulo">Articulos</p>
-                    <p>En construcción..</p>
+                    <p>Próximanente..</p>
                     <div class="badges-contenedor">
                         <span class="badge text-bg-primary">Escribir</span>
                         <span class="badge text-bg-primary">Editar</span>
@@ -126,9 +122,8 @@
                     <i class="bi bi-book"></i>
                     <p class="experiencia-titulo">Estudios</p>
                     <p> UADER 2023: Introducción a la Programación en Lenguaje Python.
-                        MAXI PROGRAMA 2023: Curso C# .Net Nivel 1 y 2 terminados, Nivel 3 en curso.
-                        UTN 2023: Tecnicatura Universitaria en Programación, 1º año finalizado.
-                       
+                        MAXI PROGRAMA 2023-24: Curso C# .Net Nivel 1, 2 y 3 finalizados.
+                        UTN 2023-24: Tecnicatura Universitaria en Programación, 1º año finalizado, cursando el 2º año.                       
                     </p>
                     <div class="badges-contenedor">
                         <span class="badge text-bg-primary">FreeCodeCamp</span>
@@ -246,15 +241,15 @@
                 <!--Proyecto 6-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="img/ecommerce.png" alt="Proyecto 6, ecommerce">
+                        <img src="img/webapi.png" alt="Proyecto 6, API de productos">
                         <div class="overlay">
-                            <p>Ecommerce</p>
+                            <p>Web Api</p>
                             <div class="iconos-contenedor">
                                 <a href="https://www.freecodecamp.org/espanol/" target="_blank"
                                     rel="noopener noreferrer">
                                     <i class="bi bi-laptop"></i>
                                 </a>
-                                <a href="https://github.com/RodrigoBombieri/app-E-commerce"
+                                <a href="https://github.com/RodrigoBombieri/API_Producto"
                                     target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
@@ -308,11 +303,11 @@
     <!--Fin de la seccion Articulos-->
 
     <!--Seccion Testimonios-->
-    <section id="testimonios" class="testimonios seccion-clara">
+    <!-- <section id="testimonios" class="testimonios seccion-clara">
         <h2 class="seccion-titulo">Testimonios</h2>
         <h3 class="seccion-descripcion">Éstos son algunos testimonios de mis clientes</h3>
          <!--Carrousel-->   
-         <div id="testimonios-carrusel" class="carousel slide carousel-dark" data-bs-ride="carousel">
+         <!-- <div id="testimonios-carrusel" class="carousel slide carousel-dark" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">             
                 <div class="container">
@@ -354,7 +349,7 @@
               <span class="visually-hidden">Siguiente</span>
             </button>
           </div>
-    </section>
+    </section> --> -->
     <!--Fin de la seccion Testimonios-->
 
     <!--Seccion Contacto-->
@@ -387,7 +382,7 @@
         <img class="footer-logo" src="img/logo.svg" alt="Logo del portafolio">
         <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos!</p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-            <a href="https://www.linkedin.com/in/rodrigo-bombieri/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/rodrigobombieri-dev/" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-linkedin"></i>
             </a>
             <a href="https://twitter.com/BombaDev7" target="_blank" rel="noopener noreferrer">
