Ajustando detalles en portfolio

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
             <img class="foto-perfil rounded-circle" src="img/foto.jpg" alt="foto de rodrigo">
             <h1>Hola, soy Rodrigo Bombieri</h1>
-            <h2>En la actualidad soy estudiante de la Tecnicatura en Programación en UTN</h2>
+            <h2>Técnico en Programación - UTN</h2>
         </div>
         <div class="hero-inferior">
             <img class="hero-inferior-img img-fluid" src="img/desarrollo-movil.png" alt="monitor, smartphone">
@@ -78,7 +78,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
         <div class="contenedor">
             <h2 class="text-center seccion-titulo">Conoceme</h2>
-            <p class="text-center seccion-texto"> Soy de Urdinarrain, Entre Ríos, Argentina, tengo 33 años y me encuentro cursando la Tecnicatura en Programación, en la Universidad Tecnológica Nacional.
+            <p class="text-center seccion-texto"> Soy de Urdinarrain, Entre Ríos, Argentina, tengo 34 años y en Diciembre de 2024 finalicé la Tecnicatura en Programación, en la Universidad Tecnológica Nacional.
                 Me fascina aprender nuevas temáticas, mi curiosidad me lleva a querer conocer hasta el último detalle de la tecnología en la que esté trabajando 
                 y a continuar capacitándome hasta perfeccionarla.
                 Si crees que puedo ayudar a un proyecto que estés desarrollando ¡Contáctame!</p>
@@ -98,12 +98,13 @@
                     <i class="bi bi-laptop"></i>
                     <p class="experiencia-titulo">Desarrollo Web</p>
                     <p>Algunas de las tecnologías en las que tengo conocimientos son:
-                    C# .Net | SQL | HTML | CSS | Python | Git | GitHub | C++ | Bootstrap </p>
+                    C# .Net | SQL | HTML | CSS | Python | Git | GitHub | C++ | Bootstrap | Java | </p>
                     <div class="badges-contenedor">
                         <span class="badge text-bg-primary">HTML</span>
                         <span class="badge text-bg-primary">CSS</span>
                         <span class="badge text-bg-primary">Javascript</span>
                         <span class="badge text-bg-primary">Bootstrap</span>
+                        <span class="badge text-bg-primary">Java</span>
                     </div>
                 </div>
                 <!--Articulos-->
@@ -123,7 +124,8 @@
                     <p class="experiencia-titulo">Estudios</p>
                     <p> UADER 2023: Introducción a la Programación en Lenguaje Python.
                         MAXI PROGRAMA 2023-24: Curso C# .Net Nivel 1, 2 y 3 finalizados.
-                        UTN 2023-24: Tecnicatura Universitaria en Programación, 1º año finalizado, cursando el 2º año.                       
+                        UTN 2023-24: Tecnicatura Universitaria en Programación.
+                        UTN 2024: Curso de Programación interactiva e IA.                       
                     </p>
                     <div class="badges-contenedor">
                         <span class="badge text-bg-primary">FreeCodeCamp</span>
@@ -137,24 +139,24 @@
     <!--Fin de la seccion Experiencia-->
 
     <!--Seccion Proyectos-->
-    <section id="proyectos-recientes" class="proyectos-recientes seccion-clara d-flex flex-column">
-        <h2 class="seccion-titulo texto-negro">Mis proyectos recientes</h2>
-        <h3 class="seccion-descripcion">Estos son algunos de los proyectos en los que trabajé recientemente: </h3>
+    <section id="proyectos-recientes" class="proyectos-recientes seccion-oscura d-flex flex-column">
+        <h2 class="seccion-titulo texto-blanco">Mis proyectos recientes</h2>
+        <h3 class="seccion-texto">Estos son algunos de los proyectos en los que trabajé recientemente: </h3>
         <!--Galeria de Proyectos--> 
         <div class="container text-center proyectos-contenedor">
             <div class="row">
                 <!--Proyecto 1-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="img/calculadora.png" alt="Proyecto 1, calculadora">
+                        <img src="img/bank-app.png" alt="Proyecto 1, App banco">
                         <div class="overlay">
-                            <p>Calculadora</p>
+                            <p>Sistema de Gestión Bancaria </p>
                             <div class="iconos-contenedor">
                                 <a href="https://www.freecodecamp.org/espanol/" target="_blank"
                                     rel="noopener noreferrer">
                                     <i class="bi bi-laptop"></i>
                                 </a>
-                                <a href="https://github.com/RodrigoBombieri/ArgentinaPrograma/tree/main/Calculadora"
+                                <a href="https://github.com/RodrigoBombieri/TPINT_GRUPO_2_LAB4"
                                     target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
@@ -165,15 +167,15 @@
                 <!--Proyecto 2-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="img/weather-app.png" alt="Proyecto 2, weather-app">
+                        <img src="img/cloud-clasif.png" alt="Proyecto 2, cloud-clasif-app">
                         <div class="overlay">
-                            <p>Weather App</p>
+                            <p>Clasificador de Nubes</p>
                             <div class="iconos-contenedor">
                                 <a href="https://www.freecodecamp.org/espanol/" target="_blank"
                                     rel="noopener noreferrer">
                                     <i class="bi bi-laptop"></i>
                                 </a>
-                                <a href="https://github.com/RodrigoBombieri/weatherBombApp/tree/main/Weather%20App"
+                                <a href="https://github.com/RodrigoBombieri/IA-Projects"
                                     target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
@@ -270,7 +272,7 @@
     <!--Fin de la seccion Proyectos-->
 
     <!--Seccion Articulos-->
-    <section id="articulos" class="articulos justify-content-start seccion-oscura">
+    <section id="articulos" class="articulos justify-content-start seccion-clara">
         <h2 class="seccion-titulo">Artículos</h2>
         <div class="card">
             <div class="card-header">
@@ -349,7 +351,7 @@
               <span class="visually-hidden">Siguiente</span>
             </button>
           </div>
-    </section> --> -->
+    </section> -->
     <!--Fin de la seccion Testimonios-->
 
     <!--Seccion Contacto-->
