Actualizando título en la sección principal y ajustando estilos de imagen en la sección inferior

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
             <img class="foto-perfil rounded-circle" src="img/foto.jpg" alt="foto de rodrigo">
             <h1>Hola, soy Rodrigo Bombieri</h1>
-            <h2>Técnico en Programación - UTN</h2>
+            <h2>Técnico Universitario en Programación - UTN</h2>
         </div>
         <div class="hero-inferior">
             <img class="hero-inferior-img img-fluid" src="img/desarrollo-movil.png" alt="monitor, smartphone">
